# streak-gen

./: .gitignore  CLAUDE.md  LICENSE  README.md  generate_months.sh  pyproject.toml
src/streak_gen/: cli.py  font_outline.py  layout_year.py  render_svg.py  seeds.py  segmenter.py  types.py  voronoi.py
